--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,35 @@
 buildscript {
-    ext { // 전역변수 설정
-        springBootVersion = '2.1.7.RELEASE'
+    ext { /* ext : 전역변수를 설정하겠다. */
+        springBootVersion = '2.1.7.RELEASE' /* springBootVersion 변수 */
     }
     repositories {
         mavenCentral()
-        jcenter() /* 라이브러리 난이드로 많이 사용함. */
+        jcenter() /* mavenCentral의 업로드 난이도가 높아 최근 개발자들의 라이브러리로 많이 사용 */
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") // 위에서 설정하는 2.1.7 버전으로 의존받겠다.
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") /* 버전 설정 */
     }
 }
 
-apply plugin : 'java'
-apply plugin : 'eclipse'
-apply plugin : 'org.springframework.boot'
-apply plugin : 'io.spring.dependency-management' /* springboot 의존성들을 관리해주는 플러그인 */
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-group 'com.msuk.sample'
-version '1.0-SNAPSHOT'
+group 'org.msuk.samplePractice'
+version '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    jcenter()
+    jcenter() /* mavenCentral의 업로드 난이도가 높아 최근 개발자들의 라이브러리로 많이 사용 */
 }
 
-dependencies { /* 버전 명시하지 않아야 최상위 설정된 springboot 버전을 따라간다. (버전관리 + 버전 충돌 방지) */
+dependencies { /* 버전을 명시하지 않아야 최상위에 설정한 springboot 버전을 따라간다. (버전관리 + 버전충돌 방지) */
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')  /* 이게 없으니까 왜 lombok 적용이 안될까... ㅠㅠ */
+    compile('org.springframework.boot:spring-boot-starter-data-jpa') /* spring boot용 spring-data-jpa 라이브러리 */
+    compile('com.h2database:h2') /* 인메모리 관계형 DBMS / 메모리에서 실행되므로 재시작할때마다 초기화 / 테스트용도로 사용 */
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
